# simple-rag-demo

./: pyproject.toml  simple_rag_demo.ipynb
data/: brown_bin.txt  general_into.txt  green_bin.txt  yellow_bin.txt
