[project]
name = "simple-rag-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.12"
dependencies = [
    "faiss-cpu>=1.14.2",
    "jupyter>=1.1.1",
    "numpy>=2.4.6",
    "openai>=2.38.0",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.5.1",
    "torch>=2.12.0",
]
